# oximeter_pico

./: .gitignore  README.md
oximeter_pico_hw/: PulseOximeter.kicad_pcb  PulseOximeter.kicad_pro  PulseOximeter.kicad_sch  readme.md
oximeter_pico_hw/SFH7060/: SFH7060.kicad_mod  sfh7060.kicad_sym
oximeter_pico_hw/SFH7072/: SFH7072.kicad_mod  sfh7072.kicad_sym
oximeter_pico_hw/gerber-FinalRun/: PulseOximeter-B_Cu.gbr  PulseOximeter-B_Mask.gbr  PulseOximeter-B_Paste.gbr  PulseOximeter-B_Silkscreen.gbr  PulseOximeter-Edge_Cuts.gbr  PulseOximeter-F_Cu.gbr  PulseOximeter-F_Mask.gbr  PulseOximeter-F_Paste.gbr  PulseOximeter-F_Silkscreen.gbr  PulseOximeter-NPTH.drl  PulseOximeter-PTH.drl  PulseOximeter-job.gbrjob
oximeter_pico_hw/gerber-PrototypeRun/: PulseOximeter-B_Cu.gbr  PulseOximeter-B_Mask.gbr  PulseOximeter-B_Paste.gbr  PulseOximeter-B_Silkscreen.gbr  PulseOximeter-Edge_Cuts.gbr  PulseOximeter-F_Cu.gbr  PulseOximeter-F_Mask.gbr  PulseOximeter-F_Paste.gbr  PulseOximeter-F_Silkscreen.gbr  PulseOximeter-NPTH.drl  PulseOximeter-PTH.drl  PulseOximeter-job.gbrjob
oximeter_pico_sw/: 7seg.c  7seg.h  7seg.pio  CMakeLists.txt  digital_filter.c  digital_filter.h  heartbeat_detector.c  heartbeat_detector.h  oximeter_pico_sw.c  raw_data.txt  test_filter.py
oximeter_pico_sw/signal_processing_tests/: tset_pycom.m
